--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -16,6 +16,7 @@ $color-green-dark-1: #6ca170; // input focus
 $color-green-dark-2: #67b06c; // button bg, button text, links hover
 $color-green-dark-3: #008000; // success text, loader, bg
 
+$color-orange-50: #fffdf9; // input background
 $color-orange-200: #ffc683;
 $color-orange-300: #ffad4d;
 $color-orange-400: #ff9920;
