--- a/src/frontend/components/consumers/NavBar/NavBar.module.scss
+++ b/src/frontend/components/consumers/NavBar/NavBar.module.scss
@@ -3,168 +3,153 @@
 @import "../../../../../src/styles/variables";
 
 .header {
+  background-color: rgba($color-green-dark-3, 0.25);
   min-width: 260px;
   position: relative;
   z-index: 50;
-  @include lg-min {
+  @include md-min {
     background-image: url("/assets/footer-bg-pattern.png");
     background-repeat: repeat;
   }
 
-  .headerContainer {
-    background-color: rgba($color-green-dark-3, 0.25);
-    padding: 0.75rem 0;
-    @include lg-min {
-      padding: 1rem 0;
-    }
+  &__headline {
+    @include wrapper;
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    padding-block: 1rem;
+  }
 
-    .headerItems {
-      align-items: center;
-      display: flex;
-      justify-content: space-between;
-      @include wrapper;
+  &__icons {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    justify-content: space-between;
+  }
 
-      img {
-        cursor: pointer;
-      }
-
-      .burgerContainer {
-        margin-right: 1em;
-        display: flex;
-
-        @media screen and (min-width: $burger-menu-screen-width) {
-          display: none;
-        }
-      }
-
-      .logo {
-        cursor: pointer;
-        width: 140px;
-        @include lg-min {
-          width: 240px;
-        }
-        & > img {
-          display: block;
-          height: auto;
-          width: 100%;
-        }
-      }
+  &__burger {
+    @media screen and (min-width: $burger-menu-screen-width) {
+      display: none;
     }
   }
 
-  .navigation {
-    background-color: $color-bg-light-1;
-    border-bottom: 1px solid $color-orange-500; //$color-green-dark-2
-    padding: 1em 0;
-    position: absolute;
+  &__search {
+    aspect-ratio: 1;
+    cursor: pointer;
+    display: block;
+    width: 16px;
+    @include md-min {
+      width: 21px;
+    }
+    @include lg-min {
+      width: 26px;
+    }
+  }
+
+  &__logo {
+    cursor: pointer;
+    width: 130px;
+    @include md-min {
+      width: 190px;
+    }
+    @include lg-min {
+      width: 240px;
+    }
+    &Image {
+      display: block;
+      height: auto;
+      width: 100%;
+    }
+  }
+}
+
+.navbar {
+  background-color: $color-white;
+  border-bottom: 1px solid $color-green-dark-2;
+  padding-block: 1rem;
+  position: absolute;
+  width: 100%;
+  @media screen and (min-width: $burger-menu-screen-width) {
+    padding-top: 1.5rem;
+    position: relative;
+  }
+  @include xl-min {
+    padding-top: 1.875rem;
+  }
+  @include xxl-min {
+    padding-top: 2.25rem;
+  }
+
+  &__hidden {
+    display: none;
+    @media screen and (min-width: $burger-menu-screen-width) {
+      display: flex;
+    }
+  }
+
+  &__visible {
+    display: flex;
+  }
+
+  &__list {
+    @include wrapper;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    list-style: none;
     width: 100%;
     @media screen and (min-width: $burger-menu-screen-width) {
-      padding: 0.5em 0;
-      position: relative;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: space-evenly;
     }
-
-    .list {
-      display: flex;
-      flex-direction: column;
-      gap: 1em;
-      width: 100%;
-      @include wrapper;
-      @media screen and (min-width: $burger-menu-screen-width) {
-        flex-direction: row;
-        flex-wrap: wrap;
-        gap: 2em;
-        justify-content: center;
-      }
-
-      > a {
-        text-decoration: none;
-      }
-
-      .item {
-        align-items: center;
-        //background-color: $color-green-1;
-        background-color: $color-orange-500;
-        border: none;
-        border-radius: 3em;
-        color: $color-white;
-        display: flex;
-        font-size: 1em;
-        justify-content: space-between;
-        padding: 0.5em 1em;
-        @media screen and (min-width: $burger-menu-screen-width) {
-          background-color: transparent;
-          color: $color-gray-dark-1;
-          padding: 0;
-
-          > img {
-            display: none;
-          }
-        }
-
-        &:hover {
-          //background-color: $color-green-3;
-          background-color: $color-orange-300;
-          @media screen and (min-width: $burger-menu-screen-width) {
-            color: $color-orange-500; //$color-green-dark-2
-            background-color: transparent;
-          }
-        }
-      }
-    }
-
-    &.hidden {
-      display: none;
-      @media screen and (min-width: $burger-menu-screen-width) {
-        display: flex;
-      }
-    }
-
-    &.visible {
-      display: flex;
+    @include xxl-min {
+      max-width: 85rem;
     }
   }
 
-  .searchContainer {
-    background-color: $color-white;
-    border-bottom: 1px solid #999;
-    left: 0;
-    padding-bottom: 1em;
-    padding-top: 1em;
-    position: absolute;
-    top: 100%;
-    width: 100%;
+  &__link {
+    align-items: center;
+    background-color: $color-orange-500;
+    border: none;
+    border-radius: 3em;
+    color: $color-white;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0.5em 1em;
+    text-decoration: none;
+    @media screen and (min-width: $burger-menu-screen-width) {
+      background-color: transparent;
+      color: $color-gray-dark-1;
+      padding: 0;
+    }
 
-    .search {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      gap: 1em;
-      width: 100%;
-      @include wrapper;
-      @include cwd-min(420px) {
-        flex-direction: row;
+    &Text {
+      font-size: 1rem;
+      font-weight: 500;
+      @include xl-min {
+        font-size: 1.125rem;
       }
-
-      input[type="text"] {
-        @include input-1;
-        font-size: 1rem;
-        padding: 0.5rem;
-      }
-
-      input[type="submit"] {
-        @include button-1;
-        border-radius: 0.75rem;
-        font-size: 1rem;
-        padding: 0.5rem;
+      @include xxl-min {
+        font-size: 1.25rem;
       }
     }
 
-    &.hidden {
-      display: none;
+    &Image {
+      display: block;
+      @media screen and (min-width: $burger-menu-screen-width) {
+        display: none;
+      }
     }
 
-    &.visible {
-      display: flex;
+    &:hover {
+      background-color: $color-orange-300;
+      @media screen and (min-width: $burger-menu-screen-width) {
+        color: $color-orange-500;
+        background-color: transparent;
+      }
     }
   }
 }
