--- a/src/frontend/components/consumers/PathToPage/PathToPage.module.scss
+++ b/src/frontend/components/consumers/PathToPage/PathToPage.module.scss
@@ -6,7 +6,7 @@
   @include wrapper;
   align-items: center;
   display: flex;
-  padding-block: 0.5em !important;
+  padding-block: 1.5rem !important;
 
   &__button {
     background-color: transparent;
