--- a/src/frontend/pages/consumers/UserBar/userBar.module.scss
+++ b/src/frontend/pages/consumers/UserBar/userBar.module.scss
@@ -1,4 +1,5 @@
 @import "@/styles/variables";
+@import "@/styles/responsive";
 
 .userBarContainer {
   display: flex;
@@ -29,4 +30,17 @@
 .userSignOutBtn {
   width: auto;
   margin: 0;
+}
+
+.cartIcon {
+  aspect-ratio: 1;
+  cursor: pointer;
+  display: block;
+  width: 16px;
+  @include md-min {
+    width: 23px;
+  }
+  @include lg-min {
+    width: 30px;
+  }
 }
