--- a/src/frontend/components/consumers/ProductItem/ProductItem.module.scss
+++ b/src/frontend/components/consumers/ProductItem/ProductItem.module.scss
@@ -69,32 +69,46 @@
 }
 
 .price {
-  align-items: center;
+  align-items: flex-end;
   display: flex;
   flex-direction: row;
   gap: 0.25rem;
-  height: 1rem;
+  height: 1.75rem;
   justify-content: space-between;
   margin-bottom: 0.5rem;
+  @container productCard (min-width:11rem) {
+    align-items: center;
+    height: 1rem;
+  }
+
+  &__sale {
+    align-items: flex-start;
+    display: flex;
+    flex-direction: column;
+    @container productCard (min-width:11rem) {
+      align-items: flex-end;
+      flex-direction: row;
+    }
+  }
+
+  &__previousPrice {
+    color: $color-gray-dark-1;
+    font-size: 0.75rem;
+    margin-right: 0.5rem;
+    text-decoration: line-through;
+    @container productCard (min-width:12.5rem) {
+      font-size: 0.938rem;
+    }
+    @container productCard (min-width:17.5rem) {
+      font-size: 1.125rem;
+    }
+  }
 
   &__actionPrice {
     color: $color-red-1;
     font-size: 1rem;
     @container productCard (min-width:12.5rem) {
       font-size: 1.125rem;
-    }
-
-    span {
-      color: $color-gray-dark-1;
-      font-size: 0.75rem;
-      margin-right: 0.5rem;
-      text-decoration: line-through;
-      @container productCard (min-width:12.5rem) {
-        font-size: 0.938rem;
-      }
-      @container productCard (min-width:17.5rem) {
-        font-size: 1.125rem;
-      }
     }
   }
 
