--- a/src/frontend/components/consumers/ProductPageComponents/Reviews.module.scss
+++ b/src/frontend/components/consumers/ProductPageComponents/Reviews.module.scss
@@ -4,19 +4,30 @@
 
 .reviews {
   @include wrapper;
-  margin-inline: 0;
   margin-bottom: 3rem;
-  max-width: 83.5rem !important;
+
+  &__inner {
+    max-width: 83.5rem !important;
+  }
 
   &__header {
+    align-items: flex-start;
     border-bottom: 1px solid $color-gray-light-1;
     display: flex;
+    flex-direction: column;
+    gap: 1rem;
     padding-bottom: 1rem;
     @include md-min {
+      flex-direction: row;
+      gap: 5rem;
       padding-bottom: 1.5rem;
     }
     @include lg-min {
+      gap: 12rem;
       padding-bottom: 2rem;
+    }
+    @include xl-min {
+      gap: 20rem;
     }
   }
 
@@ -39,6 +50,12 @@
     }
   }
 
+  &__buttonAddReview {
+    @include button-2;
+    margin-inline: 0;
+    max-width: 18rem !important;
+  }
+
   &__reviews {
     list-style: none;
   }
@@ -46,9 +63,18 @@
 
 .review {
   border-bottom: 1px solid $color-gray-light-1;
+  display: block;
   padding-block: 0.5rem;
   @include md-min {
     padding-block: 1.5rem;
+  }
+
+  &_visible {
+    display: block;
+  }
+
+  &_hidden {
+    display: none;
   }
 
   &__header {
@@ -65,6 +91,7 @@
 
   &__name {
     font-size: 1rem;
+    font-weight: 700;
     line-height: 1.5;
     @include md-min {
       flex: 1;
@@ -91,6 +118,12 @@
     display: block;
     height: auto;
     width: 18px;
+
+    &_hover {
+      &:hover {
+        cursor: pointer;
+      }
+    }
   }
 
   &__date {
@@ -115,6 +148,34 @@
     }
     @include lg-min {
       font-size: 1.125rem;
+    }
+  }
+
+  &__buttonMoreReviews {
+    align-items: center;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    font-family: inherit;
+    margin: 1rem auto 0 auto;
+    outline: none;
+    @include md-min {
+      margin-right: 0;
+    }
+
+    &Text {
+      font-size: 1.125rem;
+      font-weight: 600;
+    }
+
+    &Icon {
+      transform: rotate(0deg);
+      &Up {
+        transform: rotate(180deg);
+      }
     }
   }
 }
