--- a/src/frontend/components/consumers/HomePageComponents/Banner/Banner.module.scss
+++ b/src/frontend/components/consumers/HomePageComponents/Banner/Banner.module.scss
@@ -28,25 +28,28 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  background-color: #00000030;
+  background-blend-mode: darken;
   display: flex;
-  height: 500px;
+  height: 234px;
   justify-content: center;
   @include md-min {
-    height: 600px;
+    height: 400px;
   }
   @include lg-min {
-    height: 700px;
+    height: 550px;
   }
   @include xl-min {
-    height: 800px;
+    height: 650px;
   }
 
-  .slideTitle {
+  &__title {
     color: $color-white;
-    font-size: 2.5rem;
-    font-weight: 400;
-    padding: 0 3rem 0 3rem;
+    font-size: 2rem;
+    font-weight: 600;
+    padding: 0 1.5rem;
     text-align: center;
+    line-height: 1.5;
     max-width: 1000px;
     @include md-min {
       font-size: 3rem;
@@ -62,8 +65,6 @@
 
 .slide1 {
   background-image: url("/assets/home-page/banner/hero-1-mobile.webp");
-  background-color: #00000030;
-  background-blend-mode: darken;
   @include lg-min {
     background-image: url("/assets/home-page/banner/hero-1-desktop.webp");
   }
@@ -71,8 +72,6 @@
 
 .slide2 {
   background-image: url("/assets/home-page/banner/hero-2-mobile.webp");
-  background-color: #00000030;
-  background-blend-mode: darken;
   @include lg-min {
     background-image: url("/assets/home-page/banner/hero-2-desktop.webp");
   }
@@ -80,8 +79,6 @@
 
 .slide3 {
   background-image: url("/assets/home-page/banner/hero-3-mobile.webp");
-  background-color: #00000030;
-  background-blend-mode: darken;
   @include lg-min {
     background-image: url("/assets/home-page/banner/hero-3-desktop.webp");
   }
@@ -90,4 +87,56 @@
 .mySwiper {
   text-align: center;
   min-width: 260px;
+
+  & :global(.swiper-pagination) {
+    color: $color-white;
+    font-weight: 500;
+    font-size: 1rem;
+    position: absolute;
+    bottom: 0.5rem;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    @include lg-min {
+      font-size: 1.5rem;
+      bottom: 1rem;
+    }
+  }
+
+  & :global(.swiper-pagination-current) {
+    font-size: 1.5rem;
+    @include lg-min {
+      font-size: 2rem;
+    }
+  }
+}
+
+.navigationArrow {
+  bottom: 0.625rem;
+  left: 0;
+  right: 0;
+  cursor: pointer;
+  position: absolute;
+  z-index: 1;
+  @include lg-min {
+    bottom: 1.25rem;
+  }
+
+  & > img {
+    z-index: 0;
+  }
+
+  &_left {
+    transform: translateX(-2rem);
+    @include lg-min {
+      transform: translateX(-2.5rem);
+    }
+  }
+
+  &_right {
+    transform: translateX(2rem);
+    @include lg-min {
+      transform: translateX(2.5rem);
+    }
+  }
 }
