--- a/src/frontend/components/consumers/ProductList/ProductList.module.scss
+++ b/src/frontend/components/consumers/ProductList/ProductList.module.scss
@@ -9,19 +9,53 @@
     color: $color-gray-dark-1;
     font-size: 1.5rem;
     font-weight: 500;
-    margin-bottom: 1.25rem;
+    margin-bottom: 1.125rem;
+    line-height: 1.5;
     @include md-min {
-      font-size: 1.75rem;
+      font-size: 2rem;
       margin-bottom: 2.25rem;
     }
     @include lg-min {
-      font-size: 2rem;
+      font-size: 2.5rem;
+      margin-bottom: 2.75rem;
+    }
+    @include xl-min {
+      font-size: 3rem;
       margin-bottom: 3.25rem;
     }
   }
+}
 
-  .navigation {
-    font-size: 1.2rem;
-    padding-top: 20px;
+.productsSwiper {
+  padding-bottom: 2.5rem;
+  @include lg-min {
+    padding-bottom: 3rem;
+  }
+  @include xl-min {
+    padding-bottom: 3.5rem;
+  }
+
+  & :global(.swiper-pagination-bullets) {
+    top: auto;
+    bottom: 0.25rem;
+  }
+
+  & :global(.swiper-pagination-bullet) {
+    height: 1rem;
+    width: 1rem;
+  }
+
+  & :global(.swiper-pagination-bullet-active) {
+    background-color: $color-orange-500;
+  }
+
+  & :global(.swiper-pagination-bullet-active-prev),
+  & :global(.swiper-pagination-bullet-active-next) {
+    transform: scale(0.8);
+  }
+
+  & :global(.swiper-pagination-bullet-active-prev-prev),
+  & :global(.swiper-pagination-bullet-active-next-next) {
+    transform: scale(0.6);
   }
 }
