--- a/src/frontend/components/consumers/SortAndFilter/SortAndFilter.module.scss
+++ b/src/frontend/components/consumers/SortAndFilter/SortAndFilter.module.scss
@@ -6,106 +6,83 @@
   @include wrapper;
   margin-bottom: 1rem;
   margin-top: 1rem;
+}
 
-  .buttons {
+.buttons {
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+
+  &__button {
     align-items: center;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    margin-bottom: 1rem;
+    font-family: inherit;
+    gap: 0.5rem;
+    justify-content: center;
+    outline: none;
 
-    .button {
-      align-items: center;
-      background-color: transparent;
-      border: none;
-      cursor: pointer;
-      display: flex;
-      flex-direction: row;
-      gap: 0.5rem;
-      justify-content: center;
-      outline: none;
-
-      .buttonText {
-        color: $color-gray-dark-1;
-        font-size: 1rem;
+    &Text {
+      color: $color-gray-dark-1;
+      font-size: 1rem;
+      @include md-min {
+        font-size: 1.25rem;
       }
-    }
-  }
 
-  .dialogs {
-    height: 0;
-    width: 100%;
-    z-index: 1;
-
-    &__dialog {
-      background-color: rgba($color-black, 0.2);
-      height: 100vh;
-      left: 0;
-      position: fixed;
-      top: 0;
-      width: 100%;
-      z-index: 50;
-
-      &_inner {
-        background-color: $color-bg-light-1;
-        display: flex;
-        flex-direction: column;
-        gap: 1.5rem;
-        height: 100%;
-        max-width: 300px;
-        padding-top: 2rem;
-        padding-bottom: 2.5rem;
-        width: 100%;
-
-        &_sort {
-          margin-left: auto;
-        }
+      &_right {
+        text-align: right;
       }
     }
   }
 }
 
-.dialogContainer {
-  background-color: $color-bg-light-1;
-  border-radius: 1rem;
-  box-shadow: 0px 0px 1rem #5558;
-  margin-bottom: 1rem;
-  padding: 1rem;
+.dialogs {
+  height: 0;
+  width: 100%;
+  z-index: 1;
 
-  .dialogTitle {
-    align-items: center;
-    display: flex;
-    flex-direction: row;
-    gap: 1rem;
-    justify-content: space-between;
-    margin-bottom: 1.5rem;
+  &__filterDialog {
+    background-color: rgba($color-black, 0.2);
+    height: 100vh;
+    left: 0;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 50;
 
-    .dialogTitleName {
-      color: $color-gray-dark-1;
-      font-size: 1rem;
-    }
+    &_inner {
+      background-color: $color-bg-light-1;
+      display: flex;
+      flex-direction: column;
+      gap: 1.5rem;
+      height: 100%;
+      max-width: 300px;
+      padding-top: 2rem;
+      padding-bottom: 2.5rem;
+      width: 100%;
 
-    .dialogTitleIcon {
-      cursor: pointer;
+      &_sort {
+        margin-left: auto;
+      }
     }
   }
 
-  .sortItems {
-    display: flex;
-    flex-direction: column;
-    gap: 1.5rem;
+  &__sortDialog {
+    position: relative;
 
-    .sortItem {
-      align-items: center;
-      display: flex;
-      flex-direction: row;
-      gap: 1rem;
-      justify-content: space-between;
-      list-style: none;
-
-      label {
-        cursor: pointer;
-      }
+    &_inner {
+      background-color: $color-white;
+      border-radius: 1rem;
+      position: absolute;
+      right: 0;
+      top: 0;
+      z-index: 10;
     }
   }
 }
