--- a/src/frontend/components/consumers/ProductItem/ProductItem.module.scss
+++ b/src/frontend/components/consumers/ProductItem/ProductItem.module.scss
@@ -63,7 +63,7 @@
       font-size: 1.25rem;
     }
     &:hover {
-      color: $color-green-dark-2;
+      color: $color-orange-500;
     }
   }
 }
