--- a/src/frontend/components/consumers/ProductPageComponents/Slider.module.scss
+++ b/src/frontend/components/consumers/ProductPageComponents/Slider.module.scss
@@ -3,13 +3,13 @@
 @import "../../../../styles/variables";
 
 .container {
-  height: 100%;
   position: relative;
   width: 100%;
 
   .image {
     object-fit: contain;
     object-position: center;
+    display: block;
     height: 100%;
     width: 100%;
   }
