--- a/src/frontend/pages/consumers/CategoryPage/CategoryPage.module.scss
+++ b/src/frontend/pages/consumers/CategoryPage/CategoryPage.module.scss
@@ -4,26 +4,45 @@
 
 .category {
   padding-bottom: 5em;
+}
 
-  .title {
-    font-size: 3rem;
-    text-align: center;
-    padding: 3rem 0;
+.title {
+  color: $color-gray-dark-1;
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin-bottom: 1rem;
+  line-height: 1.5;
+  text-align: center;
+  text-transform: capitalize;
+  @include md-min {
+    font-size: 2rem;
+    margin-bottom: 1.5rem;
   }
+  @include lg-min {
+    font-size: 2.5rem;
+    margin-bottom: 1.75rem;
+  }
+  @include xl-min {
+    font-size: 3rem;
+    margin-bottom: 2rem;
+  }
+}
 
-  .products {
-    @include wrapper;
-    display: grid;
-    gap: 20px;
-    list-style: none;
-    @include md-min {
-      grid-template-columns: repeat(2, 1fr);
-    }
-    @include lg-min {
-      grid-template-columns: repeat(3, 1fr);
-    }
-    @include xl-min {
-      grid-template-columns: repeat(4, 1fr);
-    }
+.products {
+  @include wrapper;
+  display: grid;
+  column-gap: 0.5rem;
+  row-gap: 1.5rem;
+  list-style: none;
+  @media screen and (min-width: 310px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  @include lg-min {
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 1rem;
+    row-gap: 2rem;
+  }
+  @include xl-min {
+    grid-template-columns: repeat(4, 1fr);
   }
 }
