--- a/src/frontend/components/consumers/ProductPageComponents/Reviews.module.scss
+++ b/src/frontend/components/consumers/ProductPageComponents/Reviews.module.scss
@@ -12,13 +12,12 @@
 
   &__header {
     align-items: flex-start;
+    justify-content: space-between;
     border-bottom: 1px solid $color-gray-light-1;
     display: flex;
-    flex-direction: column;
     gap: 1rem;
     padding-bottom: 1rem;
     @include md-min {
-      flex-direction: row;
       gap: 5rem;
       padding-bottom: 1.5rem;
     }
@@ -54,6 +53,10 @@
     @include button-2;
     margin-inline: 0;
     max-width: 18rem !important;
+
+    &_marginTop {
+      margin-top: 1rem !important;
+    }
   }
 
   &__reviews {
@@ -152,6 +155,7 @@
   }
 
   &__buttonMoreReviews {
+    color: $color-orange-300;
     align-items: center;
     background-color: transparent;
     border: none;
@@ -160,7 +164,7 @@
     flex-direction: row;
     gap: 1rem;
     font-family: inherit;
-    margin: 1rem auto 0 auto;
+    // margin: 1rem auto 0 auto;
     outline: none;
     @include md-min {
       margin-right: 0;
@@ -177,5 +181,32 @@
         transform: rotate(180deg);
       }
     }
+
+    &_alignRight {
+      margin-left: auto;
+    }
+
+    &_marginTop {
+      margin-top: 1rem;
+    }
   }
+}
+
+.desktop {
+  display: none;
+  @include md-min {
+    display: block;
+    width: fit-content;
+  }
+}
+
+.mobile {
+  display: block;
+  @include md-min {
+    display: none;
+  }
+}
+
+.center {
+  margin: auto;
 }
