--- a/src/frontend/pages/consumers/CartPage/CartPage.module.scss
+++ b/src/frontend/pages/consumers/CartPage/CartPage.module.scss
@@ -2,73 +2,73 @@
 @import "../../../../../src/styles/mixins";
 @import "../../../../../src/styles/responsive";
 
-.productsWrapper {
+.container {
+  @include wrapper;
   flex: 1 1 auto;
 
   .products {
     display: grid;
     gap: 2em;
     list-style: none;
-    @include wrapper;
-    @include md-min {
-      grid-template-columns: repeat(2, 1fr);
-    }
-    @include lg-min {
-      grid-template-columns: repeat(3, 1fr);
-    }
-
-    .warning {
-      text-align: center;
-      margin: 30px 0;
-    }
-
-    .cartItem {
-      position: relative;
-    }
   }
+}
+
+.maxWidth {
+  max-width: 26rem;
 }
 
 .price {
-  @include wrapper;
   align-items: center;
-  background-color: #d9d9d9;
   display: flex;
   justify-content: space-between;
-  margin-top: 1rem;
-  padding-top: 1rem !important;
-
-  .caption {
-    color: $color-gray-dark-1;
-    font-size: 14px;
+  margin: 1rem auto;
+  @include lg-min {
+    margin: 1rem 0 1rem auto;
   }
 
-  .sum {
+  &__text {
     color: $color-gray-dark-1;
-    font-size: 16px;
-    font-weight: 500;
+    font-size: 1rem;
+    line-height: 1.5;
+
+    @include lg-min {
+      font-size: 1.25rem;
+    }
+    @include xl-min {
+      font-size: 1.5rem;
+    }
+
+    &_bold {
+      font-weight: 500;
+    }
   }
 }
 
-.linkToOrder {
-  @include wrapper;
-  background-color: #d9d9d9;
-
-  padding-top: 1rem !important;
-  padding-bottom: 1rem !important;
-
-  & > a {
-    text-decoration: none;
+.links {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  @include lg-min {
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    gap: 2rem;
   }
 
-  .button {
+  &__order {
     @include button-1;
-    max-width: 100%;
     text-decoration: none;
+    @extend .maxWidth;
+  }
+
+  &__categories {
+    @include button-2;
+    text-decoration: none;
+    @extend .maxWidth;
   }
 }
 
 .emptyCart {
-  @include wrapper;
   text-align: center;
 
   &__icon {
@@ -95,5 +95,11 @@
 
 .similarProducts {
   @include wrapper;
-  padding-top: 5em !important;
+  padding-block: 2rem;
+  @include lg-min {
+    padding-block: 3rem;
+  }
+  @include xl-min {
+    padding-block: 4rem;
+  }
 }
