--- a/src/frontend/components/consumers/ProductItem/ProductItem.module.scss
+++ b/src/frontend/components/consumers/ProductItem/ProductItem.module.scss
@@ -54,8 +54,7 @@
     text-overflow: ellipsis;
     text-decoration: none;
     transition: all 0.2s;
-    white-space: nowrap;
-    width: fit-content;
+    word-break: break-word;
     @container productCard (min-width:12.5rem) {
       font-size: 1rem;
     }
