--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -33,7 +33,7 @@
 
 @mixin input-1 {
   background-color: $color-bg-light-2;
-  border: 2px solid $color-green-1;
+  border: 2px solid $color-gray-light-1;
   border-radius: 0.75rem; // 12px
   color: $color-gray-dark-1;
   font-size: 1.125rem; // 18px
@@ -168,7 +168,7 @@
 }
 
 @mixin validData {
-  color: $color-green-dark-3;
+  color: $color-gray-dark-1;
   font-weight: $font-weight-medium;
 }
 
