--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -33,6 +33,7 @@ $m: 20px;
 //font weight
 $font-weight-normal: 400;
 $font-weight-medium: 500;
+$font-weight-semi: 600;
 
 //font sizes
 $font-size-xl: 20px;
