--- a/src/frontend/components/consumers/Fields/Field.module.scss
+++ b/src/frontend/components/consumers/Fields/Field.module.scss
@@ -8,9 +8,8 @@
 
 .Field__label_marginBottom {
   display: block;
-  margin-bottom: $s;
+  margin-bottom: 0.25rem;
 }
-
 .Field__label:has(+ input:valid),
 .Field__label:has(+ .Field__inputWrapper input:valid) {
   @include validData;
@@ -33,7 +32,7 @@ input:valid + .Field__errorMsg,
 }
 .Field__inputWrapper {
   &:not(:last-of-type) {
-    margin-bottom: $s;
+    margin-bottom: 1.5rem;
   }
   position: relative;
 }
@@ -99,9 +98,10 @@ input:valid + .Field__errorMsg,
   }
 }
 .labelSelect {
-  margin-top: 0.5rem;
   display: block;
   width: 100%;
+  margin-bottom: 0.25rem;
+  font-weight: $font-weight-medium;
 
   span.invalidData {
     @include invalidData;
@@ -109,7 +109,26 @@ input:valid + .Field__errorMsg,
 }
 .select {
   @include input-1;
-  margin: 0.5rem 0;
+  appearance: none;
+}
+.selectWrapper {
+  margin-bottom: 2rem;
+  position: relative;
+
+  & img {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 1rem;
+  }
 }
 
+.labelRadioBtn {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  &:not(:nth-child(3)) {
+    margin-bottom: 1rem;
+  }
+}
 // ===========inserted==========
