--- a/src/frontend/components/consumers/OrderPageComponents/Order/Order.module.scss
+++ b/src/frontend/components/consumers/OrderPageComponents/Order/Order.module.scss
@@ -4,7 +4,7 @@
 
 .wrapper {
   @include wrapper;
-  @include shadow;
+  // @include shadow;
   margin-bottom: 1rem;
   margin-top: 1rem;
   padding: 0 !important;
