--- a/src/frontend/components/consumers/ProductPageComponents/Reviews.module.scss
+++ b/src/frontend/components/consumers/ProductPageComponents/Reviews.module.scss
@@ -192,6 +192,13 @@
   }
 }
 
+.buttonReviewWidth {
+  width: 100%;
+  @include lg-min {
+    max-width: fit-content;
+  }
+}
+
 .desktop {
   display: none;
   @include md-min {
