--- a/src/frontend/components/consumers/Button/Button.module.scss
+++ b/src/frontend/components/consumers/Button/Button.module.scss
@@ -2,10 +2,185 @@
 @import "../../../../../src/styles/mixins";
 @import "../../../../../src/styles/responsive";
 
+@mixin _button {
+  align-items: center;
+  background-color: $color-orange-500;
+  border: 1px solid $color-orange-500;
+  border-radius: 2rem;
+  cursor: pointer;
+  color: $color-white;
+  display: flex;
+  font-family: inherit;
+  font-size: 1rem;
+  font-weight: 600;
+  flex-direction: row;
+  justify-content: center;
+  gap: 0.5rem;
+  max-width: 26rem;
+  outline: 3px solid transparent;
+  padding: 0.625rem;
+  text-align: center;
+  transition: all 0.3s;
+  width: 100%;
+  @media (min-width: 768px) {
+    font-size: 1.125rem;
+    gap: 0.75rem;
+    padding: 1rem;
+  }
+
+  &:disabled {
+    background-color: $color-orange-100;
+    border-color: $color-orange-100;
+    color: $color-gray-light-2;
+    cursor: initial;
+    pointer-events: none;
+    user-select: none;
+    & .icon {
+      background-color: $color-gray-light-2;
+    }
+  }
+
+  &:hover {
+    background-color: $color-orange-300;
+    color: $color-white;
+    & .icon {
+      background-color: $color-white;
+    }
+  }
+  &:active,
+  &:focus {
+    background-color: $color-orange-500;
+    outline-color: $color-orange-100;
+  }
+}
+
+@mixin _link {
+  text-decoration: none;
+}
+
+.icon {
+  background-color: $color-white;
+  display: block;
+  height: 1.25rem;
+  min-height: 1.25rem;
+  mask-repeat: no-repeat;
+  -webkit-mask-repeat: no-repeat;
+  mask-size: contain;
+  -webkit-mask-size: contain;
+  mask-position: center;
+  -webkit-mask-position: center;
+  transition: all 0.3s;
+  width: 1.25rem;
+  min-width: 1.25rem;
+
+  @media (min-width: 768px) {
+    height: 1.375rem;
+    min-height: 1.375rem;
+    width: 1.375rem;
+    min-width: 1.375rem;
+  }
+}
+
 .button {
-  @include button-2;
-  height: fit-content;
-  margin-inline: auto;
-  font-size: 1.125rem;
-  max-width: 360px !important;
+  @include _button;
+}
+
+.buttonSecondary {
+  @include _button;
+  background-color: transparent;
+  border-color: $color-orange-300;
+  color: $color-orange-500;
+  & .icon {
+    background-color: $color-orange-500;
+  }
+
+  &:hover {
+    background-color: $color-orange-200;
+    border-color: $color-orange-400;
+    color: $color-white;
+    & .icon {
+      background-color: $color-white;
+    }
+  }
+  &:active,
+  &:focus {
+    background-color: $color-orange-200;
+    border-color: $color-orange-400;
+    color: $color-white;
+    outline-color: $color-orange-100;
+    & .icon {
+      background-color: $color-white;
+    }
+  }
+}
+
+.buttonTernary {
+  @include _button;
+  background-color: transparent;
+  border: none;
+  color: $color-orange-300;
+  max-width: fit-content;
+  outline: none;
+  padding: 0;
+  & .icon {
+    background-color: $color-orange-300;
+  }
+
+  @media (min-width: 768px) {
+    padding: 0;
+  }
+
+  &:disabled {
+    background-color: transparent;
+    color: $color-orange-100;
+    & .icon {
+      background-color: $color-orange-100;
+    }
+  }
+
+  &:hover {
+    background-color: transparent;
+    color: $color-orange-500;
+    & .icon {
+      background-color: $color-orange-500;
+    }
+  }
+  &:active,
+  &:focus {
+    background-color: transparent;
+    color: $color-orange-500;
+    & .icon {
+      background-color: $color-orange-500;
+    }
+  }
+}
+
+.buttonTernaryDark {
+  @extend .buttonTernary;
+  color: $color-gray-dark-1;
+  & .icon {
+    background-color: $color-gray-dark-1;
+  }
+
+  &:disabled {
+    color: $color-gray-light-2;
+    & .icon {
+      background-color: $color-gray-light-2;
+    }
+  }
+}
+
+.link {
+  @extend .button;
+  @include _link;
+}
+
+.linkSecondary {
+  @extend .buttonSecondary;
+  @include _link;
+}
+
+.linkTernary {
+  @extend .buttonTernary;
+  @include _link;
 }
