--- a/src/frontend/components/consumers/PathToPage/PathToPage.module.scss
+++ b/src/frontend/components/consumers/PathToPage/PathToPage.module.scss
@@ -6,39 +6,12 @@
   @include wrapper;
   align-items: center;
   display: flex;
+  gap: 1rem;
   padding-block: 1.5rem !important;
 
   &__button {
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    margin-right: 1rem;
-    padding: 0;
-    outline: none;
-    width: 1.25rem;
     @media screen and (min-width: $burger-menu-screen-width) {
       display: none;
-    }
-
-    &_image {
-      background-color: $color-orange-300;
-      display: block;
-      height: 1.25rem;
-      mask-image: url("/assets/icon/icon-arrow-left.svg");
-      -webkit-mask-image: url("/assets/icon/icon-arrow-left.svg");
-      mask-repeat: no-repeat;
-      -webkit-mask-repeat: no-repeat;
-      mask-size: contain;
-      -webkit-mask-size: contain;
-      mask-position: center;
-      -webkit-mask-position: center;
-      margin-right: 0.5rem;
-      transition: 0.4s;
-      width: 1.25rem;
-
-      &:hover {
-        background-color: $color-orange-500;
-      }
     }
   }
 
@@ -74,28 +47,6 @@
     text-decoration: none;
     &:hover {
       color: $color-orange-300;
-    }
-  }
-
-  &__linkImage {
-    background-color: $color-gray-light-1;
-    display: block;
-    height: 1rem;
-    mask-image: url("/assets/icon/icon-home.svg");
-    -webkit-mask-image: url("/assets/icon/icon-home.svg");
-    mask-repeat: no-repeat;
-    -webkit-mask-repeat: no-repeat;
-    mask-size: contain;
-    -webkit-mask-size: contain;
-    mask-position: center;
-    -webkit-mask-position: center;
-    margin-right: 0.5rem;
-    transition: 0.4s;
-    min-width: 1rem;
-    width: 1rem;
-
-    &:hover {
-      background-color: $color-orange-300;
     }
   }
 
