change Order styles

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,7 +4,7 @@ $color-black: #000;
 $color-bg-light-1: #fafafa; // main background
 $color-bg-light-2: #fffdf9; // input background
 
-$color-gray-light-1: #afb3af; // input placeholder, product measure
+$color-gray-light-1: #777a77; // input placeholder, product measure
 $color-gray-dark-1: #1e1e1c; // main text, input text
 
 $color-green-light-1: #e0ece1; // button bg
