--- a/src/frontend/components/consumers/Fields/Field.module.scss
+++ b/src/frontend/components/consumers/Fields/Field.module.scss
@@ -85,17 +85,60 @@ input:valid + .Field__errorMsg,
   @include input-1;
   margin: 0.5rem 0;
 }
-.radioBtn {
-  appearance: none;
-  color: #555;
-  width: 1rem;
-  height: 1rem;
-  border: 1px solid #555;
-  border-radius: 50%;
 
-  &:checked {
-    background: radial-gradient(#555 50%, #fff 50%);
+.labelRadioBtn {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  position: relative;
+  &:not(:nth-child(3)) {
+    margin-bottom: 1rem;
   }
+}
+
+.radioBtn {
+  // appearance: none;
+  // color: #555;
+  // width: 1rem;
+  // height: 1rem;
+  // border: 1px solid #555;
+  // border-radius: 50%;
+
+  // &:checked {
+  //   background: radial-gradient(#555 50%, #fff 50%);
+  // }
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+.checkmark {
+  position: relative;
+  top: 0;
+  left: 0;
+  height: 24px;
+  width: 24px;
+  background-color: transparent;
+  border: solid 0.1rem $color-orange-200;
+  border-radius: 50%;
+}
+
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+  left: 50%;
+  top: 50%;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  background-color: $color-orange-200;
+}
+input:checked ~ .checkmark:after {
+  display: block;
 }
 .labelSelect {
   display: block;
@@ -122,13 +165,3 @@ input:valid + .Field__errorMsg,
     right: 1rem;
   }
 }
-
-.labelRadioBtn {
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
-  &:not(:nth-child(3)) {
-    margin-bottom: 1rem;
-  }
-}
-// ===========inserted==========
