--- a/src/frontend/components/consumers/OrderPageComponents/Order/OrderForm/OrderForm.module.scss
+++ b/src/frontend/components/consumers/OrderPageComponents/Order/OrderForm/OrderForm.module.scss
@@ -5,8 +5,7 @@
 .form {
   display: grid;
   margin: auto;
-  padding: 1rem;
-  width: 100%;
+  // width: 100%;
   @include lg-min {
     gap: 2rem;
     grid-template-columns: repeat(3, 1fr);
@@ -56,6 +55,8 @@
     .inputText {
       @include input-1;
       margin: 0.5rem 0;
+      height: 200px;
+      resize: none;
     }
 
     .labelSelect {
@@ -104,7 +105,6 @@
     .btnOrder {
       @include button-1;
       margin: 0.75rem 0;
-      max-width: 500px;
     }
   }
 }
