--- a/src/frontend/components/consumers/CartItem/CartItem.module.scss
+++ b/src/frontend/components/consumers/CartItem/CartItem.module.scss
@@ -80,7 +80,7 @@
   gap: 0.5rem;
 
   &__button {
-    background-color: $color-orange-500 !important;
+    background-color: $color-orange-300 !important;
     align-items: center;
     background-color: transparent;
     border: none;
@@ -96,9 +96,10 @@
     -webkit-mask-size: contain;
     mask-position: center;
     -webkit-mask-position: center;
+    transition: all 0.3s;
 
     &:hover {
-      background-color: $color-red-1 !important;
+      background-color: $color-orange-500 !important;
     }
   }
 
