--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -34,12 +34,17 @@
 @mixin input-1 {
   background-color: $color-bg-light-2;
   border: 2px solid $color-gray-light-1;
-  border-radius: 0.75rem; // 12px
+  border-radius: 0.75rem;
   color: $color-gray-dark-1;
-  font-size: 1.125rem; // 18px
-  padding: 1.125rem 0.75rem;
+  font-size: 1rem;
+  padding: 0.75rem 0.75rem;
   outline: none;
   width: 100%;
+  @include lg-min {
+    font-size: 1.125rem;
+    padding: 0.875rem;
+  }
+
   &::placeholder {
     color: $color-gray-light-1;
   }
